--- a/src/blocks/header-basket/__img/__img.scss
+++ b/src/blocks/header-basket/__img/__img.scss
@@ -3,3 +3,13 @@
   height: 2rem;
   margin-right: 0.8rem;
 }
+
+@media (max-width: 48em) {
+	.header-basket__img {
+		position: absolute;
+		right: 0.3rem;
+		top: -3.5rem;
+		width: 5.5rem;
+		height: 5.5rem;
+	}
+}
