--- a/src/blocks/header-logo/__wrap/__wrap.scss
+++ b/src/blocks/header-logo/__wrap/__wrap.scss
@@ -9,5 +9,6 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		width: 31.4rem;
 	}
 }
