--- a/src/blocks/header/__burger/__burger.scss
+++ b/src/blocks/header/__burger/__burger.scss
@@ -5,5 +5,6 @@
 @media (max-width: 48em) {
 	.header__burger {
 		display: block;
+		margin-top: 2rem;
 	}
 }
